Fixed html and css validator issues

--- a/about.html
+++ b/about.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang = "en">
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,7 +12,7 @@
     <link href="https://fonts.googleapis.com/css?family=Poppins:400,600" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Crimson+Text" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
-    <script type="text/javascript" src="assets/js/script.js" ></script>
+    <script src="assets/js/script.js" ></script>
     <title>React - About</title>
 </head>
 <body>
@@ -24,7 +24,7 @@
         <div class="container">
             <div class="row">
               <div class="col-lg-6 col-xs-6 col-sm-6 col-md-6">
-                <a href="index.html"><img class="img-responsive" src="assets/img/logo.png"></a>
+                <a href="index.html"><img class="img-responsive" src="assets/img/logo.png" alt = "logo"></a>
               </div>
               <div class="col-lg-6 col-xs-6 col-sm-6 col-md-6 text-right">
                   <div id="mySidenav" class="sidenav text-center">
@@ -47,7 +47,7 @@
         <section class="about text-center">
            <h2>About</h2>
           <hr class="hr-mid">
-            <img class="img-about img-responsive" src="assets/img/5.jpg">
+            <img class="img-about img-responsive" src="assets/img/5.jpg" alt = "ladies-computer">
         </section>
 
         <section class="Element-heading">
@@ -60,6 +60,7 @@
                    — Jordan Walke, React Creator
                 </p>
               </div>
+          </div>
           </div>
         </section>
 
@@ -85,7 +86,7 @@
           <div class="col-lg-5 col-md-5 col-sm-5 col-xs-5">
           </div>
           <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2">
-            <img class="img-responsive foot-img" src="assets/img/footer-logo.png">
+            <img class="img-responsive foot-img" src="assets/img/footer-logo.png" alt = "footer-logo">
           </div>
           <div class="col-lg-5 col-md-5 col-sm-5 col-xs-5">
           </div>
@@ -95,6 +96,6 @@
         </div>
       </div>
     </section>
-
+    </section>
 </body>
 </html>
