--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,7 +12,7 @@
     <link href="https://fonts.googleapis.com/css?family=Poppins:400,600" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Crimson+Text" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
-    <script type="text/javascript" src="assets/js/script.js" ></script>
+    <script src="assets/js/script.js" ></script>
     <title>React - Home</title>
 </head>
 <body>
@@ -24,7 +24,7 @@
             <div class="container">
               <div class="row">
                 <div class="col-lg-6 col-xs-6 col-sm-6 col-md-6">
-                    <a href="index.html"><img class="img-responsive" src="assets/img/logo.png"></a>
+                    <a href="index.html"><img class="img-responsive" src="assets/img/logo.png" alt = "logo"></a>
                 </div>
                 <div class="col-lg-6 col-xs-6 col-sm-6 col-md-6 text-right">
                     <div id="mySidenav" class="sidenav text-center">
@@ -45,7 +45,7 @@
           <div class="container">
             <div class="row">
                <div class="wow-logo">
-                  <img class="img-responsive img-logo" src="assets/img/react_logo.png">
+                  <img class="img-responsive img-logo" src="assets/img/react_logo.png" alt = "react_logo">
                </div> 
                <div class="font-1 helmet text-center">
                  <p>A <strong>flexible </strong>JavaScript frontend library.</p>
@@ -89,7 +89,7 @@
                     </div>
                     <div class="col-lg-3 col-xs-12 col-sm-12 col-md-3">
                             <div class="holder-img">
-                              <img class="round-img img-responsive center-block" src="assets/img/2.jpg">
+                              <img class="round-img img-responsive center-block" src="assets/img/2.jpg" alt = "seamless-experience">
                             </div>
                     </div>
                 </div>
@@ -111,7 +111,7 @@
                     </div>
                     <div class="col-lg-3 col-xs-12 col-sm-12 col-md-3 col-md-pull-9">
                             <div class="holder-img">
-                              <img class="round-img img-responsive center-block" src="assets/img/3.jpg">
+                              <img class="round-img img-responsive center-block" src="assets/img/3.jpg" alt = "reusable-components">
                             </div>
                     </div> 
                 </div>
@@ -133,7 +133,7 @@
                     </div>
                     <div class="col-lg-3 col-xs-12 col-sm-12 col-md-3">
                             <div class="holder-img">
-                              <img class="round-img img-responsive center-block" src="assets/img/4.jpg">
+                              <img class="round-img img-responsive center-block" src="assets/img/4.jpg" alt = "massive-ecosystem">
                             </div>
                     </div>
                 </div>
@@ -148,7 +148,7 @@
           <div class="col-lg-5 col-md-5 col-sm-5 col-xs-5">
           </div>
           <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2">
-            <img class="img-responsive foot-img" src="assets/img/footer-logo.png">
+            <img class="img-responsive foot-img" src="assets/img/footer-logo.png" alt = "footer-logo">
           </div>
           <div class="col-lg-5 col-md-5 col-sm-5 col-xs-5">
           </div>
